--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ colorama = "^0.4.3"
 jinja2 = "^2.11.2"
 python = "^3.8"
 python-dateutil = "^2.8.1"
+confuse = "^1.1.0"
 
 [tool.poetry.dev-dependencies]
 black = "^19.10b0"
