--- a/conventional/config_default.yaml
+++ b/conventional/config_default.yaml
@@ -2,14 +2,17 @@ parser:
   module: conventional.parser.conventional_commits
   name: ConventionalCommitParser
 
-  include-unparsed: false
-
   config:
     types: [build, chore, ci, docs, feat, fix, perf, refactor, style, test]
 
+tags:
+  exclude: []
+
 template:
   package: conventional
-  name: conventional-changelog.md
+  name: changelog.md
+
+  include-unparsed: false
 
   config:
     types:
