--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ jinja2 = "^2.11.2"
 python = "^3.8"
 python-dateutil = "^2.8.1"
 confuse = "^1.1.0"
+pytest-asyncio = "^0.12.0"
+aiocache = "^0.11.1"
 
 [tool.poetry.dev-dependencies]
 black = "^19.10b0"
