--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,25 +1,42 @@
 [tool.poetry]
 name = "conventional"
-version = "0.1.0"
-description = "No frills processor for Conventional Commits (https://www.conventionalcommits.org/)"
-authors = ["David Symons <david.symons@onemodel.co>"]
+version = "0.2.0"
+authors = ["David Symons <david@symons.io>"]
+description = "No frills command-line tool for processing structured commits."
+
+homepage = "https://github.com/multimac/conventional"
+readme = "README.md"
+license = "MIT"
+
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Environment :: Console",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Topic :: Software Development :: Build Tools",
+    "Topic :: Software Development :: Version Control :: Git",
+]
 
 [tool.poetry.dependencies]
-click = "^7.1.2"
-click-log = "^0.3.2"
+aiocache = "^0.11.1"
 colorama = "^0.4.3"
+confuse = "^1.1.0"
 jinja2 = "^2.11.2"
 python = "^3.8"
 python-dateutil = "^2.8.1"
-confuse = "^1.1.0"
-pytest-asyncio = "^0.12.0"
-aiocache = "^0.11.1"
+typer = "^0.2.1"
 
 [tool.poetry.dev-dependencies]
 black = "^19.10b0"
 isort = "^4.3.21"
 mypy = "^0.780"
 pytest = "^5.2"
+pytest-asyncio = "^0.12.0"
+
+[tool.poetry.scripts]
+conventional = "conventional.cli:main"
 
 [tool.isort]
 combine_as_imports = true
@@ -29,5 +46,5 @@ line_length = 99
 multi_line_output = 3
 
 [build-system]
-requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
+requires = ["poetry>=0.12"]
