feat: Refactor CLI library, update changelog template, add examples
Release-Notes: This commit replaces the Click library with Typer, adds
new functionality to the default changelog template, and also adds some
examples of how `conventional` can be used with other command-line
tools.

Changes:
* When `conventional` is run from within a git repository, the root of
  the repository is checked for a `.conventional.yaml` file and, if it
  exists, the file is loaded as a configuration file.
* The `--config-file` parameter can now be specified multiple times to
  load multiple configuration files. Each time the parameter is
  specified, properties in the given configuration file will override
  those in earlier files.
* The `template` command supports setting the heading for unreleased
  changes via the `--unreleased-version` parameter. For template
  authors, this sets the `tag["name"]` property other properties on the
  `tag` object for unreleased commits are left as `None`. A new test
  `unreleased` has been added to test if a tag is for an unreleased
  version.
* The default changelog templates support linking to Github / Bitbucket
  / etc. for showing the source at a given version and comparing two
  versions. This is configured via the `version-link-pattern`, used to
  generate a link to the source for a given version, and
  `compare-link-pattern`, used to link to a comparison between two
  versions.
* The default `changelog.md` template also supports rendering "BREAKING
  CHANGE" footers.

BREAKING CHANGE: The `--path` parameter has been removed. The command
now need to be run from within a git repository if using any of the
commands which interact with git (eg. `list-commits`).

--- a/.conventional.yaml
+++ b/.conventional.yaml
@@ -1,4 +1,6 @@
 template:
   config:
     commit-link-pattern: https://github.com/multimac/conventional/commit/{commit}
+    compare-link-pattern: https://github.com/multimac/conventional/compare/{from}...{to}
     issue-link-pattern: https://github.com/multimac/conventional/issues/{issue}
+    version-link-pattern: https://github.com/multimac/conventional/tree/{tag}
