--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,14 +26,15 @@ confuse = "^1.1.0"
 jinja2 = "^2.11.2"
 python = "^3.8"
 python-dateutil = "^2.8.1"
-typer = "^0.2.1"
+typer = "^0.3"
+flake8 = "^3.8.3"
 
 [tool.poetry.dev-dependencies]
 black = "^19.10b0"
-isort = "^4.3.21"
-mypy = "^0.780"
-pytest = "^5.2"
-pytest-asyncio = "^0.12.0"
+isort = "^5.3"
+mypy = "^0.782"
+pytest = "^6.0"
+pytest-asyncio = "^0.14.0"
 
 [tool.poetry.scripts]
 conventional = "conventional.cli:main"
